blogs/simple-mesh-vms/config/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: simple-app
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: frontend
  namespace: simple-app
  labels:
    app: frontend
---
# Service descriptor to expose web frontend
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: simple-app
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
---
# Deployment descriptor for frontend   
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: simple-app
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      serviceAccountName: frontend    
      containers:
      - name: frontend
        image: ghcr.io/nmnellis/fake-service:v2
        ports:
        - containerPort: 8080
        env:
        - name: "LISTEN_ADDR"
          value: "0.0.0.0:8080"
        - name: "NAME"
          value: "frontend"
        - name: "MESSAGE"
          value: "Hello From frontend (call /ui for service graph)"
